force-app/main/default/objects/SCOC__CreditBureau__c/SCOC__CreditBureau__c.object-meta.xml
<CustomObject>
    <description>Credit Bureau information</description>
    <label>Credit Bureau</label>
    <nameField>
        <label>Bureau Abbreviation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Bureaus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>