force-app/main/default/objects/SCOC__CreditBureau__c/fields/SCOC__BureauName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BureauName__c</fullName>
    <description>Name of credit bureau</description>
    <label>Bureau Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>