force-app/main/default/objects/SCOC__CreditBureau__c/fields/SCOC__Logo__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Logo__c</fullName>
    <description>Static Resource name containing credit bureau logo</description>
    <label>Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>