force-app/main/default/objects/SCOC__CreditBureau__c/fields/SCOC__StandardDisclosure__c.field-meta.xml
<CustomField>
    <fullName>SCOC__StandardDisclosure__c</fullName>
    <description>Standard Disclosure for credit bureau</description>
    <label>Standard Disclosure</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>