force-app/main/default/objects/SCOC__CreditBureau__c/validationRules/SCOC__Enforce_Unique_Bureau_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>SCOC__Enforce_Unique_Bureau_Name</fullName>
    <active>true</active>
    <description>Enforces unique names for the bureaus</description>
    <errorConditionFormula>Id != VLOOKUP($ObjectType.SCOC__CreditBureau__c.Fields.Id, $ObjectType.SCOC__CreditBureau__c.Fields.Name, Name)</errorConditionFormula>
    <errorMessage>A record already exists with the name you attempted to add.</errorMessage>
</ValidationRule>